--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,7 @@ body {
 }
 
 .row {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 }
 
@@ -41,10 +38,6 @@ a {
 }
 
 /* main css start */
-
-section {
-    display: flex;
-}
 
 .half_width {
 
@@ -116,4 +109,73 @@ section {
 .dream_big h1 {
 
     padding-top: 50px;
+}
+
+#experiance_part {
+
+    background: url(../Images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position-y: 100%;
+    margin-bottom: 100px;
+}
+
+#experiance_part>h1 {
+
+    font-size: 50px;
+    font-weight: 600;
+    color: #000;
+    margin-bottom: 50px;
+
+}
+
+.ex_description {
+    margin: 0 7% 0 0;
+    width: 43%;
+    padding-left: 20px;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
+}
+
+.ex_item_01 {
+
+    border-left: 7px solid;
+    border-image: linear-gradient(red, blue);
+    border-image-slice: 1;
+    border-radius: 10px;
+}
+
+.ex_item_02 {
+
+    border-left: 7px solid;
+    border-image: linear-gradient(tomato, yellow);
+    border-image-slice: 1;
+}
+
+.ex_description h1 {
+
+    font-size: 35px;
+}
+
+.ex_description h3 {
+
+    color: orange;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: 24px;
+}
+
+.ex_description p {
+
+    font-size: 14px;
+    letter-spacing: 2px;
+    line-height: 24px;
+    color: #444;
+    padding-bottom: 30px;
+}
+
+footer p {
+
+    text-align: center;
+    padding-bottom: 10px;
+
 }
